# scribus-api

./: README.md
src/: CMakeLists.txt  document.cpp  document.h  item.cpp  item.h  textframe.cpp  textframe.h  utilsstring.h
